# regex-lite

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  test_lexer.py
.github/workflows/: frontend.yml  python.yml
api/: Dockerfile  README.md  pyproject.toml
api/api/: __init__.py  adapters.py  main.py  schemas.py
api/tests/: test_api_contract.py
engine/: README.md  pyproject.toml
engine/regex_lite/: __init__.py  ast.py  compiler.py  lexer.py  matcher.py  parser.py  tokens.py
engine/tests/: test_captures.py  test_engine_feature.py  test_golden.py  test_lexer.py  test_matcher_match.py  test_matcher_replace.py  test_matcher_smoke.py  test_matcher_split.py  test_parser.py  test_property.py
regex_lite/: parser.py
web/: .eslintrc.js  README.md  index.html  package.json  tsconfig.json
web/src/: App.tsx  api.ts  app.css  vite-env.d.ts
