[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regex-lite-engine"
version = "0.0.1"
description = "Toy regex engine"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "hypothesis", "ruff", "black"]

[tool.hatch.build.targets.wheel]
packages = ["regex_lite"]
